layout/base/nsCSSFrameConstructor.h
@@ -236,14 +236,13 @@ class nsCSSFrameConstructor final : public nsFrameManager {
    * set.)
    */
 
-  // If aInsertionKind is Async then frame construction of the new children can
-  // be done lazily.
+  // If the insertion kind is Async then frame construction of the new children
+  // can be done lazily.
   void ContentAppended(nsIContent* aFirstNewContent, InsertionKind);
 
-  // If aInsertionkind is Async then frame construction of the new child
+  // If the insertion kind is Async then frame construction of the new child
   // can be done lazily.
-  void ContentInserted(nsIContent* aChild, nsILayoutHistoryState* aFrameState,
-                       InsertionKind aInsertionKind);
+  void ContentInserted(nsIContent* aChild, InsertionKind);
 
   // Like ContentInserted but handles inserting the children in the range
   // [aStartChild, aEndChild).  aStartChild must be non-null.  aEndChild may be
@@ -253,7 +252,6 @@ class nsCSSFrameConstructor final : public nsFrameManager {
   // be done lazily. It is only allowed to be Async when inserting a single
   // node.
   void ContentRangeInserted(nsIContent* aStartChild, nsIContent* aEndChild,
-                            nsILayoutHistoryState* aFrameState,
                             InsertionKind aInsertionKind);
 
   enum RemoveFlags {
@@ -411,8 +409,7 @@ class nsCSSFrameConstructor final : public nsFrameManager {
   // Construct the frames for the document element.  This can return null if the
   // document element is display:none, or if the document element has a
   // not-yet-loaded XBL binding, or if it's an SVG element that's not <svg>.
-  nsIFrame* ConstructDocElementFrame(Element* aDocElement,
-                                     nsILayoutHistoryState* aFrameState);
+  nsIFrame* ConstructDocElementFrame(Element* aDocElement);
 
   // Set up our mDocElementContainingBlock correctly for the given root
   // content.
@@ -2119,7 +2116,13 @@ class nsCSSFrameConstructor final : public nsFrameManager {
   bool mHasRootAbsPosContainingBlock : 1;
   bool mAlwaysCreateFramesForIgnorableWhitespace : 1;
 
-  nsCOMPtr<nsILayoutHistoryState> mTempFrameTreeState;
+  // The layout state from our history entry (to restore scroll positions and
+  // such from history), or a new one if there was none (so we can store scroll
+  // positions and such during reframe).
+  //
+  // FIXME(bug 1397239): This can leak some state sometimes for the lifetime of
+  // the frame constructor, which is not great.
+  nsCOMPtr<nsILayoutHistoryState> mFrameTreeState;
 };
 
 #endif /* nsCSSFrameConstructor_h___ */
